[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
lto = false

[dependencies]
image = { version = "0.24.4", default-features = false, features = ["png"] }
indicatif = "0.17.1"
nalgebra = { version = "0.31.2", default-features = false, features = ["libm"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rayon = "1.5.3"
